Velcro test First SandBox/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Americas</fullName>
        <description>Americas Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>No Response</fullName>
        </values>
        <values>
            <fullName>Not A Fit</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Referred to Distributor</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LATAM</fullName>
        <description>LATAM Leads Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>No Response</fullName>
        </values>
        <values>
            <fullName>Not A Fit</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Referred to Distributor</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accept_Disclaimer__c</fullName>
        <label>Accept Disclaimer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I have read and I agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Referral Details / Additional Notes</label>
        <length>55000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMOD_Lead_Id__c</fullName>
        <externalId>true</externalId>
        <label>CRMOD_Lead_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The category of the lead.</inlineHelpText>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactFormCountry__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <label>Contact City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Company__c</fullName>
        <label>Contact Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <label>Contact Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Postal_Code__c</fullName>
        <label>Contact Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State_Province__c</fullName>
        <label>Contact State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convert_to_Opportunity_Amount__c</fullName>
        <inlineHelpText>If converting this lead to an Opportunity - you need to fist input the Opportunity amount here.</inlineHelpText>
        <label>Convert to Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Converted__c</fullName>
        <formula>IsConverted = TRUE</formula>
        <label>Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_End_Cust_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to trigger a field update to run (for web2lead deal registration submissions) whereby the Temp_End_Customer_Email__c value is copied to the standard email field</description>
        <label>Copy End Cust Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <label>Customer Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive Seating</fullName>
                </value>
                <value>
                    <fullName>Automotive Interiors</fullName>
                </value>
                <value>
                    <fullName>Automotive All Other</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Mass Transit</fullName>
                </value>
                <value>
                    <fullName>Transportation Distributors</fullName>
                </value>
                <value>
                    <fullName>Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Surgical</fullName>
                </value>
                <value>
                    <fullName>Respiratory</fullName>
                </value>
                <value>
                    <fullName>Vascular</fullName>
                </value>
                <value>
                    <fullName>Ostomy</fullName>
                </value>
                <value>
                    <fullName>Contract Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Medical Distributors</fullName>
                </value>
                <value>
                    <fullName>Other (Small Applications)</fullName>
                </value>
                <value>
                    <fullName>Flexible Packaging</fullName>
                </value>
                <value>
                    <fullName>Rigid Packaging</fullName>
                </value>
                <value>
                    <fullName>Warehouse &amp; Logistics</fullName>
                </value>
                <value>
                    <fullName>Gift, Promotional &amp; Stationery</fullName>
                </value>
                <value>
                    <fullName>P&amp;MH Distributors</fullName>
                </value>
                <value>
                    <fullName>Other Packaging</fullName>
                </value>
                <value>
                    <fullName>Construction (Cable Management)</fullName>
                </value>
                <value>
                    <fullName>Building Envelop</fullName>
                </value>
                <value>
                    <fullName>Flooring</fullName>
                </value>
                <value>
                    <fullName>Renewable Energy</fullName>
                </value>
                <value>
                    <fullName>Tools &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Construction Distributors</fullName>
                </value>
                <value>
                    <fullName>Infant Care</fullName>
                </value>
                <value>
                    <fullName>Child Care</fullName>
                </value>
                <value>
                    <fullName>Feminine Care</fullName>
                </value>
                <value>
                    <fullName>Adult Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Left_Until_Expiry__c</fullName>
        <formula>if(ISNULL(Registration_Expiration__c),0, if(Registration_Expiration__c - TODAY() &gt;0, Registration_Expiration__c - TODAY(),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left Until Expiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Approved_Date__c</fullName>
        <description>Stored the date the deal registraion was approved (via field updates) and is used in lead conversion so the opportunity has the date the deal was registered and can be used to count when the deal expires</description>
        <label>Deal Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Forward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Forward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Source__c</fullName>
        <label>Deal Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Role__c</fullName>
        <label>Decision Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decison Maker</fullName>
                </value>
                <value>
                    <fullName>Recommender</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CDW</fullName>
                </value>
                <value>
                    <fullName>Ingram Micro</fullName>
                </value>
                <value>
                    <fullName>Tech Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_New_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used when forwarding opportunities to leads. When set to true it automatically sends an email to the new owner.</description>
        <label>Email New Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <description>For deal registration</description>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <label>Follow Up</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Machinery__c</fullName>
        <label>Machinery</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The market associated with the lead.</description>
        <inlineHelpText>The market associated with the lead. Aerospace, Apparel, Auto Trucks &amp; Buses, Channels, Construction, Consumer, Government, Group, Health &amp; Beauty, Industrial, Manufacturing, Medical, Non-Apparel, Other Medical, Packaging, Personal Care, Transportation</inlineHelpText>
        <label>Market</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Must choose a market that relates to the selected SBU.</errorMessage>
            <filterItems>
                <field>Market__c.SBU__c</field>
                <operation>equals</operation>
                <valueField>$Source.SBU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Mobile phone number</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_Company__c</fullName>
        <description>User Company name.</description>
        <formula>Owner:User.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>Owner:User.Region__c</formula>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Asset__c</fullName>
        <label>PDF Asset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC10001</fullName>
                </value>
                <value>
                    <fullName>GC20002</fullName>
                </value>
                <value>
                    <fullName>GC50000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Budget_Amount__c</fullName>
        <label>Project Budget Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Budgeted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Budgeted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Time_Frame__c</fullName>
        <label>Purchase Time Frame</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>1-3 Months</fullName>
                </value>
                <value>
                    <fullName>3-6 Months</fullName>
                </value>
                <value>
                    <fullName>6-9 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>Next Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Expiration__c</fullName>
        <description>Used for deal registration</description>
        <label>Registration Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reseller_Company_Name__c</fullName>
        <label>Reseller Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Email__c</fullName>
        <label>Reseller Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reseller_First_Name__c</fullName>
        <label>Reseller First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Last_Name__c</fullName>
        <label>Reseller Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Phone__c</fullName>
        <label>Reseller Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Revenue_Potential__c</fullName>
        <inlineHelpText>The total annual revenue potential of the lead.</inlineHelpText>
        <label>Revenue Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <description>Strategic Business Unit</description>
        <inlineHelpText>Strategic Business Unit</inlineHelpText>
        <label>SBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Personal Care</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_LastActivity__c</fullName>
        <label>Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SC_LastLogin__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SC_LastPasswordChanged__c</fullName>
        <label>Last Password Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SC_PasswordAnswer__c</fullName>
        <label>Password Answer</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_PasswordQuestion__c</fullName>
        <label>Password Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Password__c</fullName>
        <label>Password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Notes_2__c</fullName>
        <label>Trade Show Notes 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Notes_3__c</fullName>
        <label>Trade Show Notes 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Notes__c</fullName>
        <label>Trade Show Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trade_Show__c</fullName>
        <description>Trade show name</description>
        <inlineHelpText>Trade Show Name. If it it matches with an active Campaign, it will assign the lead to it.</inlineHelpText>
        <label>Trade Show</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Guidelines__c</fullName>
        <formula>HYPERLINK(&quot;https://na1.salesforce.com/servlet/servlet.ImageServer?oid=00D500000007cT9&amp;id=01550000000K091&quot;, &quot;View Guidelines&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Guidelines</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AIX_2018</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>AIX 2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Americas_Consumer_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Customer_Category__c</columns>
        <columns>SBU__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>SBU__c</field>
            <operation>equals</operation>
            <value>Consumer</value>
        </filters>
        <label>Americas Consumer Leads</label>
        <queue>Americas_Web_Leads</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Americas_Web_Leads_Lead</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>ContactFormCountry__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>SBU__c</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Queue</filterScope>
        <label>Americas Web Leads</label>
        <queue>Americas_Web_Leads</queue>
        <sharedTo>
            <group>NAM_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Australia_NZ_Leads_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Australia &amp; NZ Leads</label>
        <queue>Australia_NZ_Leads</queue>
        <sharedTo>
            <group>APAC_AUS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Benelux_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Benelux Leads</label>
        <queue>Benelux_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Benelux_Queue</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Benelux Queue</label>
        <queue>Benelux_Leads</queue>
        <sharedTo>
            <role>Sales_Director_Central_EMEA</role>
            <roleAndSubordinates>Benelux_Sales_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canadian_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SBU__c</columns>
        <columns>LEAD.TITLE</columns>
        <filterScope>Queue</filterScope>
        <label>Canadian Leads</label>
        <queue>Canadian_Web_Leads</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Distributor_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Distributor Leads</label>
        <queue>Distributor_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Nordics_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>EMEA Nordics</label>
        <queue>EMEA_Nordics</queue>
        <sharedTo>
            <role>Executive</role>
            <roleAndSubordinates>Commercial_Director_of_Velcro_Limited</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Open_Leads</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>SBU__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.EMEA_Lead</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>W2Les Contact Us,W2Luk Contact Us</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>EMEA Open Leads</label>
        <sharedTo>
            <group>All_EMEA_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>France_web_leads_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>France web leads</label>
        <queue>France_web_leads</queue>
        <sharedTo>
            <role>Executive</role>
            <roleAndSubordinates>Commercial_Director_of_France</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Germany_web_leads_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Germany web leads</label>
        <queue>Germany_web_leads</queue>
        <sharedTo>
            <roleAndSubordinates>Sales_Director_Central_EMEA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LATAM_North_Region_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>LATAM North Region Leads</label>
        <queue>LATAM_North_Region_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LATAM_South_Region_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>LATAM South Region Leads</label>
        <queue>LATAM_South_Region_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>APAC_Lead</fullName>
        <active>true</active>
        <businessProcess>Americas</businessProcess>
        <label>APAC Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Americas</fullName>
        <active>true</active>
        <businessProcess>Americas</businessProcess>
        <label>Americas</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMEA_Lead</fullName>
        <active>true</active>
        <businessProcess>Americas</businessProcess>
        <label>EMEA Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>LATAM_Lead</fullName>
        <active>true</active>
        <businessProcess>Americas</businessProcess>
        <label>LATAM Lead</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>leadConversionValidation</fullName>
        <active>true</active>
        <description>In order to convert a lead, an SBU must be selected.</description>
        <errorConditionFormula>AND( IsConverted,isPickVal( SBU__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>In order to convert a lead, an SBU must be selected.</errorMessage>
    </validationRules>
</CustomObject>